tests/negative/gold/toitdoc2_test.gold
tests/negative/toitdoc2_test.toit:5:1: error: Unterminated multi-line comment
/**
^
tests/negative/toitdoc2_test.toit:6:2: warning: Unresolved reference 'foo'
$foo
 ^~~
Couldn't find 'main' (with 0 or 1 argument) in entry file 'tests/negative/toitdoc2_test.toit'
Compilation failed.
